Rename app notiications as notifiers
