# backend/jobs/serializers.py
@@ -3,11 +3,11 @@
 from rest_framework import serializers
 from drf_writable_nested.serializers import WritableNestedModelSerializer
 from .models import Jobs, JobsHistory
-from notifications.serializers import NotificationsSerializer
+from notifiers.serializers import NotifiersSerializer
 
 
 class JobsSerializer(WritableNestedModelSerializer, serializers.ModelSerializer):
-    notifications = NotificationsSerializer(many=True, required=False)
+    notifiers = NotifiersSerializer(many=True, required=False)
 
     class Meta:
         model = Jobs
@@ -20,4 +20,5 @@ class JobsHistorySerializer(serializers.ModelSerializer):
     class Meta:
         model = JobsHistory
         fields = '__all__'
-        read_only_fields = fields
+        read_only_fields = ['timestamp', 'uuid',
+                            'status_code', 'success', 'response_time', 'error']
